--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <link rel="shortcut icon" href="img/website.ico">
   <meta name="description" content="YourDescriptionHere">
-  <meta name="author" content="YourStudentID">
+  <meta name="author" content="862143816">
 
-  <title>John Doe - Business Administration</title>
+  <title>Cuiyi Zhao - Business Economic</title>
 
   <!-- Bootstrap core CSS -->
   <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -27,9 +27,9 @@
 <body id="page-top">
   <nav class="navbar navbar-expand-lg navbar-dark bg-primary fixed-top" id="sideNav">
     <a class="navbar-brand js-scroll-trigger" href="#page-top">
-      <span class="d-block d-lg-none">John Doe</span>
+      <span class="d-block d-lg-none">Cuiyi Zhao</span>
       <span class="d-none d-lg-block">
-        <img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="img/profilepicture.png" alt="Profile Picture">
+        <img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="img/CuiyiZhao.jpg" alt="Profile Picture">
       </span>
     </a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -58,26 +58,27 @@
 
     <section class="resume-section p-3 p-lg-5 d-flex align-items-center" id="about">
       <div class="w-100">
-        <h1 class="mb-3">John Doe
+        <h1 class="mb-3">Cuiyi Zhao
         </h1>
-        <div class="subheading mb-5">Business Administration📚</div>
-        <p class="lead mb-4">Enter bio here<br><br>
+        <div class="subheading mb-5">Business Economics📚</div>
+        <p class="lead mb-4">Business Economics and Finance student seeking an internship in Financial institutions to gain hands-on
+        experience.<br><br>
 
-        Enter bio here<br><br>
+        Strong technical proficiency with a work history in the stock market and industrial organization.<br><br>
 
-        Enter bio here
+        In-depth knowledge of Microsoft office coupled with market analysis and Industrial analysis abilities.
         </p>
         <div class="social-icons">
-          <a target="_blank" id="linkedin" href="https://linkedin.com">
+          <a target="_blank" id="linkedin" href="https://blog.hootsuite.com/linkedin-for-business/">
             <i class="fab fa-linkedin-in"></i>
           </a>
-          <a target="_blank" id="github" href="https://github.com">
+          <a target="_blank" id="github" href="https://github.com/czhao060">
             <i class="fab fa-github"></i>
           </a>
-          <a target="_blank" id="twitter" href="https://twitter.com">
+          <a target="_blank" id="twitter" href="https://www.wired.com/story/how-to-setup-twitter-search-hashtag-and-login-help/">
             <i class="fab fa-twitter"></i>
           </a>
-          <a target="_blank" id="email" href="mailto:youremail@gmail.com">
+          <a target="_blank" id="email" href="mailto:czhao060@ucr.edu">
             <i class="fa fa-envelope"></i>
           </a>
         </div>
@@ -92,51 +93,48 @@
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5 experience">
           <div class="resume-content">
-            <h3 class="mb-0">Developer</h3>
-            <div class="subheading mb-3"><a target="_blank" href="https://yourcompany.com">Company</a></div>
+            <h3 class="mb-0">General Manager</h3>
+            <div class="subheading mb-3"><a target="_blank" href="https://www.bpgroupusa.com/">Company</a></div>
             <p>
-              • Developed websites for company X<br> 
-              • Speaker at hack-a-thons<br>
-              • Experience with HTML, CSS, Javascript, Photoshop<br>
+              • Evaluated financial statements and income reports monitoring investment performance to devise solutions for improvement and cost reduction.<br> 
+              • Communicated with Hong Kong investors to develop new investment projects<br>
+              • Utilized interpersonal relationships to finance for the project<br>
             </p>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">March 2019 - Present</span>
+            <span class="text-primary">June 2019 - Present</span>
           </div>
         </div>
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5 experience">
           <div class="resume-content">
-            <h3 class="mb-0">Cashier</h3>
-            <div class="subheading mb-3"><a target="_blank" href="https://wholefoods.com">Whole Foods</a></div>
+            <h3 class="mb-0">Minister of Publicity</h3>
+            <div class="subheading mb-3"><a target="_blank" href="https://wholefoods.com">Intellectual Gaming Puzzle Club</a></div>
             <p>
-              • Responsible for checking out customers<br>
-              • etc etc<br>
+              • Creating the atmosphere before the event<br>
+              • Publicizing the content of the event<br>
             </p>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">March 2017 - March 2019</span>
+            <span class="text-primary">Spetember 2017 - March 2019</span>
           </div>
         </div>
 
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5 experience">
           <div class="resume-content">
-            <h3 class="mb-0">Teaching Assistant</h3>
-            <div class="subheading mb-3"><a target="_blank" href="https://ucr.edu">University of California Riverside</a></div>
+            <h3 class="mb-0">Outreach department</h3>
+            <div class="subheading mb-3"><a target="_blank" href="https://en.wikipedia.org/wiki/Chinese_Students_and_Scholars_Association">CSSA Club</a></div>
             <p>
-            • Ran sessions to help students learn how to code<br>
-            • Reviewed and graded student coding projects<br>
-            • Created educational content to help promote student education<br>
-            • TA'd for over 400 students each academic quarter<br>
-
+            • Attract and communicate the sponsors of SMEs through the activities in the school to increase the richness
+              of the activities<br>
+            • Writing a yearly contract of exclusive advertising to fiance for the Club<br>
           </p>
           </div>
           <div class="resume-date text-md-right">
             <span class="text-primary">January 2011 - January 2016</span>
           </div>
         </div>
-
 
 
       </div>
@@ -152,33 +150,11 @@
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5 education">
           <div class="resume-content">
             <h3 class="mb-0">UC Riverside</h3>
-            <div class="subheading mb-3">Masters of Business Administration</div>
-            <div>MBA in International Business</div>
+            <div class="subheading mb-3">Bachelor of Arts: Business Economics</div>
+            <div>Major in Economics</div>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">August 2018 - December 2019</span>
-          </div>
-        </div>
-
-        <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5 education">
-          <div class="resume-content">
-            <h3 class="mb-0">University of California Riverside</h3>
-            <div class="subheading mb-3">Postgraduate Certificate in Business Management</div>
-            <div>Project Management</div>
-          </div>
-          <div class="resume-date text-md-right">
-            <span class="text-primary">June 2017</span>
-          </div>
-        </div>
-
-        <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5 education">
-          <div class="resume-content">
-            <h3 class="mb-0">University of California Riverside</h3>
-            <div class="subheading mb-3">Business Administration</div>
-            <div>Information Systems</div>
-          </div>
-          <div class="resume-date text-md-right">
-            <span class="text-primary">August 2012 - May 2016</span>
+            <span class="text-primary">August 19 - Current</span>
           </div>
         </div>
 
@@ -191,7 +167,10 @@
       <div class="w-100">
         <h2 class="mb-5">Portfolio</h1>
         <center>
-            <img src="img/image2.jpeg" width="500px">
+            <img src="img/image1.jpeg" width="500px">
+            <img src="img/image2.jpeg" width="500px"><br>
+            <img src="img/image2.jpg" width="500px">
+            <img src="img/image3.jpg" width="500px"><br>
         </center>
       </div>
     </section>
