--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
   <meta charset='UTF-8'>
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <link rel="shortcut icon" href="img/website.ico">
-  <meta name="description" content="YourDescriptionHere">
-  <meta name="author" content="862143816">
+  <meta name="description" content="Economic">
+  <meta name="CuiyiZhao" content="862143816">
 
   <title>Cuiyi Zhao - Business Economic</title>
 
