--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <link rel="shortcut icon" href="img/website.ico">
   <meta name="description" content="Economic">
-  <meta name="CuiyiZhao" content="862143816">
+  <meta name="author" content="862143816">
 
   <title>Cuiyi Zhao - Business Economic</title>
 
